refactoring: a single filter for all magic URL translations

--- a/content/about.html
+++ b/content/about.html
@@ -8,7 +8,7 @@ navtitle: About
     </div>
     <div class="text-block">
         <h3>The Free and Open source Software Developers’ European Meeting (FOSDEM) is a two-day event organized by volunteers to promote the widespread use of Free and Open Source software.</h3>
-        <p>Taking place in the beautiful city of <a href="page:transportation">Brussels (Belgium)</a>, FOSDEM meetings are recognized as <q>The best Free Software and Open Source events in Europe</q>.</p>
+        <p>Taking place in the beautiful city of <a href="page:practical/transportation">Brussels (Belgium)</a>, FOSDEM meetings are recognized as <q>The best Free Software and Open Source events in Europe</q>.</p>
     </div>
 </div>
 <div class="info-block">
