--- a/content/index.html
+++ b/content/index.html
@@ -60,7 +60,7 @@ visual: true
         <h2>LOCATION</h2>
         <p>FOSDEM will take place at the ULB Campus Solbosch, <strong>Brussels,</strong> <span>Belgium,</span> Europe, Earth.</p>
         <div class="location-info">
-            <div class="map"><%= img '/assets/images/map/' %></div>
+            <div class="map"><img src="asset:map"/></div>
             <div class="location-text">
                 <a class="logo-ulb-big" href="#">Université libre de bruxelles</a>
                 <ul class="location-list">
