--- a/content/practical/beerevent.html
+++ b/content/practical/beerevent.html
@@ -2,7 +2,7 @@
 title: Friday Beer Event
 aliases: /beerevent, /about/beerevent
 ---
-<%= img asset('beer'), { alt: "", style: "float:left; margin-right: 1em;" } %>
+<img src="asset:beer" alt="" style="float:left; margin-right: 1em;"/>
 <p>
 While coming over to Brussels to attend FOSDEM, don't miss this great
 opportunity to taste some of the finest <a href="http://en.wikipedia.org/wiki/Belgian_beer">beer in Belgium</a>
@@ -90,5 +90,5 @@ A lot of work has gone into making this beer event the best ever. We've taken in
 <h2>Contact and location</h2>
 <p>If you manage to get lost somehow, despite this handy little map, <a href="http://blog.sejo.be/about/">call Jochen</a>. He might not be able to help you find the way, but he should be able to find someone who can! <code>:-)</code></p>
 
-<div align="center"><a href="http://osm.org/go/0EoTgZPpj-"><%= img asset('beermap') %></a></div>
+<div align="center"><a href="http://osm.org/go/0EoTgZPpj-"><img src="asset:beermap" alt="map to the Beer Event venue"/></a></div>
 
