--- a/content/searcherview.html
+++ b/content/searcherview.html
@@ -1,6 +1,6 @@
 ---
 title: <%= @title %>
-kind: internal
+hidden: true
 navigation_erb_injection_before: '@search_navigation'
 head_erb_injection: '@head'
 nohead: true
