--- a/content/index.html
+++ b/content/index.html
@@ -6,73 +6,83 @@ nohead: true
 breadcrumbs: false
 visual: true
 ---
+<%
+# vim: set ts=2 sw=2 et ai ft=eruby:
+%>
 <div id="main">
-    <div class="s-block">
-        <div class="text-block">
-            <h2>FOSDEM is a free event that offers open source communities a place to meet, share ideas and collaborate.</h2>
-            <p>It is renowned for being highly developer-oriented and brings together 5000+ geeks from all over the world.</p>
-        </div>
-        <div class="logo-block">
-            <h3><a href="page:/about/sponsors/">SPONSORS</a></h3>
-            <%
-                cornerstone, other = sponsors.select{|s| s.include_in_toplevel?}.partition{|s| s.cornerstone?}
-                cornerstone.each do |c|
-            %>
-            <a class="logo-sponsor-cornerstone logo-<%= c.id %>" href="<%= c.path %>"><%= c.name %></a>
-            <%
-                end
-            %>
-            <% unless other.empty? %>
-                <ul class="logo-list">
-                <% other.each do |s| %>
-                    <li class="logo-sponsor-other logo-<%= s.id %>"><a href="<%= s.path %>"><%= s.name %></a></li>
-                <% end %>
-                </ul>
-            <% end %>
-        </div>
+  <div class="s-block">
+    <div class="text-block">
+      <h2>FOSDEM is a free event that offers open source communities a place to meet, share ideas and collaborate.</h2>
+      <p>It is renowned for being highly developer-oriented and brings together 5000+ geeks from all over the world.</p>
     </div>
-    <div class="news-block">
-        <h2>NEWS</h2>
-        <ul class="news-list">
-            <%
-                newsitems = @items.select {|item| item.identifier =~ %r{/headlines/}}.sort_by {|item| item[:created_at]}.reverse
-                newsitems[0,item[:maxnews]].each do |hl|
-            %>
-            <li class="news">
-            <div class="date">
-                <div class="holder">
-                    <div class="frame"><%= hl[:created_at].strftime '%Y-%m-%d' %></div>
-                </div>
-            </div>
-            <h3><a href="<%= relpath(@item.path, hl[:fullpost]) %>"><%= hl[:title] %></a></h3>
-            <p><%= hl.compiled_content(:snapshot => :pre) %></p>
-            </li>
-            <% end %>
+    <div class="logo-block">
+      <h3><a href="page:/about/sponsors/">SPONSORS</a></h3>
+      <%
+        cornerstone, other = sponsors.select{|s| s.include_in_toplevel?}.partition{|s| s.cornerstone?}
+        cornerstone.each do |c|
+      %>
+      <a class="logo-sponsor-cornerstone logo-<%= c.id %>" href="<%= c.path %>"><%= c.name %></a>
+      <%
+        end
+      %>
+      <% unless other.empty? %>
+        <ul class="logo-list">
+          <% other.each do |s| %>
+            <li class="logo-sponsor-other logo-<%= s.id %>"><a href="<%= s.path %>"><%= s.name %></a></li>
+          <% end %>
         </ul>
-        <% if newsitems.length > item[:maxnews] %>
-            <div class="btn-news">
-                <a class="btn-purple" href="#">more news</a>
-            </div>
+      <% end %>
+    </div>
+  </div>
+
+  <div class="news-block">
+    <h2>CALL FOR PARTICIPATION</h2>
+    <p>While the <a href="page:/schedule">Developer Rooms</a> have already been decided for this
+    edition, the <a href="page:news/2012-11-01-cfp/">call for participation</a> is still open for
+    lightning talks, main tracks and stands.</p>
+  </div>
+
+  <div class="news-block">
+    <h2>NEWS</h2>
+    <ul class="news-list">
+      <% newsitems = @items.select {|item| item.identifier =~ %r{/headlines/}}.sort_by {|item| item[:created_at]}.reverse; newsitems[0,item[:maxnews]].each do |hl| %>
+        <li class="news">
+        <div class="date">
+          <div class="holder">
+            <div class="frame"><%= hl[:created_at].strftime '%Y-%m-%d' %></div>
+          </div>
+        </div>
+        <h3><a href="page:<%= hl[:fullpost] %>"><%= hl[:title] %></a></h3>
+        <p><%= hl.compiled_content(:snapshot => :pre) %></p>
+        <% if hl[:readmore] %>
+          <p class="readmore"><a href="page:<%= hl[:readmore] %>">read more</a></p>
         <% end %>
+        </li>
+      <% end %>
+    </ul>
+    <% if newsitems.length > item[:maxnews] %>
+      <div class="btn-news">
+        <a class="btn-purple" href="#">more news</a>
+      </div>
+    <% end %>
+  </div>
+  <div class="location-block">
+    <h2>LOCATION</h2>
+    <p>FOSDEM will take place at the ULB Campus Solbosch, <strong>Brussels,</strong> <span>Belgium,</span> Europe, Earth.</p>
+    <div class="location-info">
+      <div class="map"><img src="asset:map"/></div>
+      <div class="location-text">
+        <a class="logo-ulb-big" href="#">Université libre de bruxelles</a>
+        <ul class="location-list">
+          <li>ULB Campus Solbosh</li>
+          <li><address>Avenue Franklin D. Roosevelt, 50</address></li>
+          <li>1050 Bruxelles</li>
         </ul>
-    </div>
-    <div class="location-block">
-        <h2>LOCATION</h2>
-        <p>FOSDEM will take place at the ULB Campus Solbosch, <strong>Brussels,</strong> <span>Belgium,</span> Europe, Earth.</p>
-        <div class="location-info">
-            <div class="map"><img src="asset:map"/></div>
-            <div class="location-text">
-                <a class="logo-ulb-big" href="#">Université libre de bruxelles</a>
-                <ul class="location-list">
-                    <li>ULB Campus Solbosh</li>
-                    <li><address>Avenue Franklin D. Roosevelt, 50</address></li>
-                    <li>1050 Bruxelles</li>
-                </ul>
-                <div class="btn-location">
-                    <a class="btn-purple" href="<%= pathof '/practical/transportation/' %>">venue &amp; travel</a>
-                </div>
-            </div>
+        <div class="btn-location">
+          <a class="btn-purple" href="<%= pathof '/practical/transportation/' %>">venue &amp; travel</a>
         </div>
+      </div>
     </div>
+  </div>
 </div>
 
