--- a/content/news.html
+++ b/content/news.html
@@ -1,11 +1,25 @@
 ---
 title: News
-kind: page
-navcat: true
 ---
-<div class="container-fluid">
-	<% @items.select {|item| news?(item) }.sort_by {|item| [item[:created_at], item[:mtime]]}.reverse.each do |hl| %>
-	<%= render('news', :item => hl) %>
-	<hr />
-	<% end %>
-</div>
+<%
+# vim: set ts=2 sw=2 et ai ft=eruby:
+%>
+<ul class="unstyled" id="all-news">
+  <%
+    @items.select {|item| item.identifier =~ %r{/headlines/}}.sort_by {|item| item[:created_at]}.reverse.each do |hl|
+  %>
+  <li class="news">
+  <div class="date">
+    <div class="holder">
+      <div class="frame"><%= hl[:created_at].strftime '%Y-%m-%d' %></div>
+    </div>
+  </div>
+  <h2><a href="page:<%= hl[:fullpost] %>"><%= hl[:title] %></a></h2>
+  <p><%= hl.compiled_content(:snapshot => :pre) %></p>
+  <% if hl[:readmore] %>
+    <p class="readmore"><a class="btn-purple" href="page:<%= hl[:readmore] %>">read more</a></p>
+  <% end %>
+  </li>
+<% end %>
+</ul>
+
