automatically display the right date of the beer event instead of the hard-coded date of FOSDEM 2012

--- a/content/practical/beerevent.html
+++ b/content/practical/beerevent.html
@@ -12,9 +12,10 @@ opportunity to taste some of the finest <a href="http://en.wikipedia.org/wiki/Be
 <h2>When?</h2>
 
 <p>
-Friday 3 February 2012 from 18:00(-ish) onwards, but feel free to join the
-party at any time of the evening. We will be there until the bar closes (well
-after midnight).
+<span title="<%= (days.first[:conference_day] - 1).strftime("%Y-%m-%d") %>" class="dtstart">
+<%= (days.first[:conference_day] - 1).strftime("%A %d %B %Y") %></span>
+from 18:00(-ish) onwards, but feel free to join the party at any time of the
+evening. We will be there until the bar closes (well after midnight).
 </p>
 
 <h2>Beer, Beer and some more Beer</h2>
