--- a/content/index.html
+++ b/content/index.html
@@ -37,7 +37,7 @@ visual: true
 
   <div class="news-block">
     <h2>CALL FOR PARTICIPATION</h2>
-    <p>While the <a href="page:/schedule">Developer Rooms</a> have already been decided for this
+    <p>While the Developer Rooms have already been decided for this
     edition, the <a href="page:news/2012-11-01-cfp/">call for participation</a> is still open for
     lightning talks, main tracks and stands.</p>
   </div>
