remove bank transfer info

--- a/content/support/donate.html
+++ b/content/support/donate.html
@@ -30,36 +30,7 @@ Donations are not tax deductible.</p>
 
 <h2>How ?</h2>
 <p>So, how can I contribute to FOSDEM ?</p>
-<ul>
-    <li>Donations at the infodesk during the conference</li>
-    <li>Donations in advance (read below)</li>
-</ul>
-
-<p>First, you need to create an account on our website. Please fill in all fields.<br/>
-After that, it's as simple as a bank transfer to the following account number:</p>
-
-<dl>
-    <dt>Bank Account Number:</dt>
-    <dd>310-1613048-24</dd>
-    <dt>SWIFT Code:</dt>
-    <dd>BBRUBEBB</dd>
-    <dt>IBAN:</dt>
-    <dd>BE81 3101 6130 4824</dd>
-</dl>
-
-<p><u>Account holder:</u><br/>
-FOSDEM VZW<br/>
-Lintsstraat 188<br/>
-B-3000 Leuven<br/>
-BELGIUM</p>
-
-<p><u>Bank Information:</u><br/>
-ING Belgium<br/>
-Avenue Marnix, 24<br/>
-B-1000 Brussels<br/>
-BELGIUM</p>
-
-<p>Write, as reference (communication), the login of your account on www.fosdem.org</p>
+<p>By making a donation at the Infodesk during the conference.</p>
 
 <p>To avoid any problems or misunderstandings in the future, read the following
 <em>VERY CAREFULLY</em>: you don't buy these items from FOSDEM — we give them
