"services" was the only list item in lowercase, I felt sorry for it

--- a/content/practical/index.html
+++ b/content/practical/index.html
@@ -10,6 +10,6 @@ navcat: true
 <h3>During the Event</h3>
 <ul>
     <li><%= l('/practical/beerevent/') %></li>
-    <li><%= l('/practical/services/', 'services') %></li>
+    <li><%= l('/practical/services/', 'Services') %></li>
     <li><%= l('/practical/catering/') %></li>
 </ul>
