--- a/content/about.html
+++ b/content/about.html
@@ -16,7 +16,7 @@ navtitle: About
         <h2>More information</h2>
         <div class="row"><strong>Mailing list:</strong> <a href="https://lists.fosdem.org/listinfo/fosdem">fosdem at lists.fosdem.org</a></div>
         <div class="info-note">We will inform you when news about FOSDEM is available.</div>
-        <div class="row"><strong>News:</strong> <a href="page:atom">atom feed</a></div>
+        <div class="row"><strong>News:</strong> <a href="page:atom">atom feed</a>, <a href="page:rss">RSS feed</a></div>
         <div class="row"><strong>Planet Aggregator:</strong> <a href="http://planet.fosdem.org/">planet.fosdem.org</a></div>
     </div>
     <div class="text-block">
