add aliases for backwards compatible URLs

--- a/content/call/for/lightningtalks.html
+++ b/content/call/for/lightningtalks.html
@@ -1,6 +1,7 @@
 ---
 title: Call for Lightning Talks
 deadline: 2012-12-01
+aliases: /call_for_lightningtalks/, /call_for_lightningtalks.html/
 ---
 <p>
 <b>Lightning Talks</b> are your chance for 15 minutes of fame: every free or
