--- a/content/call/for/main_speakers.html
+++ b/content/call/for/main_speakers.html
@@ -2,6 +2,7 @@
 title: Call for Main Track Speakers
 deadline: 2012-12-01
 deadline_extended: true
+aliases: /call_for_main_speakers/, /call_for_main_speakers.html/
 ---
 <p>
 The <b>main tracks</b> host high-quality seminars for a broad and technical
