--- a/content/call/for/stands.html
+++ b/content/call/for/stands.html
@@ -1,6 +1,7 @@
 ---
 title: Call for Stands
 deadline: 2012-11-28
+aliases: /call_for_stands/, /call_for_stands.html
 ---
 <p>
 We offer open source projects a place for <b>a stand</b> in the hallways. 
