Some rewriting for more natural sounding text flow

--- a/content/contact.html
+++ b/content/contact.html
@@ -10,6 +10,8 @@ title: Contact
 
 <p>You may also join us for a chat in <a href="irc://irc.freenode.net/fosdem">the #fosdem channel on freenode</a>.</p>
 
+<p>Visitors interested in helping out during the event can register for the <a href="http://lists.fosdem.org/mailman/listinfo/volunteers">volunteers</a> mailing list, where all communication between and coordination of volunteers takes place.</p>
+
 <p>For sponsorship inquiries <u><b>only</b></u>, please contact:</p>
 <ul>
     <li><a href="mailto:sponsors@fosdem.org">sponsors@fosdem.org</a> (preferred)</li>
