--- a/content/about.html
+++ b/content/about.html
@@ -26,10 +26,10 @@ navtitle: About
         <ul class="info-list">
             <li>get in touch with other developers and projects;</li>
             <li>be informed about the latest developments in the Free Software and Open Source world;</li>
-            <li>attend interesting talks and presentations held in large conference rooms by Free Software and Open Source project leaders and committers on various topics;</li>
+            <li>attend interesting talks and presentations on various topics by Free Software and Open Source project leaders and committers;</li>
             <li>to promote the development and the benefits of Free Software and Open Source solutions.</li>
         </ul>
-        <p>Participation and attendance is totally free, though the organization gratefully accepts donationals and sponsorships.</p>
+        <p>Participation and attendance is totally free, though the organization gratefully accepts donations and sponsorships.</p>
     </div>
 </div>
 <div class="developers-block">
@@ -46,7 +46,7 @@ navtitle: About
         <p>The FOSDEM team thinks it is very important for Free Software and Open Source developers around the world to be able to meet in “real life”.</p>
         <p>To this end, we have set up Developer Rooms (DevRooms) with network/internet connectivity and projectors where development teams can meet and showcase their projects. DevRooms are a place for teams to discuss, hack and publicly present latest directions, lightning talks, news and discussions.</p>
         <p>We believe developers can benefit a lot from these meetings.</p>
-        <p>Last year, there were more than 160 talks in the Developer Rooms in addition to the many main-track talks, the lightning talks and the LPI exams and the PGP/CAcert keysigning events.</p>
+        <p>Last year, there were more than 160 talks in the Developer Rooms in addition to the many main-track talks, the lightning talks, the LPI exams and the PGP/CAcert keysigning events.</p>
     </div>
 
     <div class="text-block">
@@ -55,24 +55,25 @@ navtitle: About
         organize a small meeting for developers of Open Source software. He called it:
         Open Source Developers' European Meeting (OSDEM).</p>
 
-        <p>Raph created a mailing list, a small website and spread the word to people
+        <p>Raphael created a mailing list, a small website and spread the word to people
         around him. Only a few weeks later, lots of people were waiting for an
         exciting event in Brussels!</p>
 
         <p>Invitations were sent to well-known figures in the community: Rasterman,
         Fyodor, Jeremy Allison and so on. They all gave a very positive response and
-        the OSDEM was on the road to success.</p>
+        OSDEM was on the road to success.</p>
 
-        <p>Many years later, OSDEM has grown to the event we now know as FOSDEM.</p>
+        <p> For the second year, OSDEM was renamed FOSDEM. And now, many years later, it
+        has grown into the event it is today.</p>
 
         <p>We now try to cover a wide spectrum of Open Source and Free Software
         projects, and offer a platform for people to collaborate in the true Open
         Source spirit.  Every year, usually during the last weekend of February, we
         host around 5000 visitors at the ULB Solbosh campus.</p>
 
-        <p>Raphael is no longer the only one behind FOSDEM, after 7 years of hard work he left the team for new Open Source plans.
-        A list of the entire staff can be seen <a href="#team">here</a>, together with
-        some information on their involvement in the FOSDEM conference.</p>
+        <p>Raphael is no longer the only one driving FOSDEM. After 7 years of hard work
+        he left the team for new Open Source plans. The FOSDEM flag is now proudly carried
+        by the following people:</p>
     </div>
 
     <div class="text-block">
@@ -80,21 +81,32 @@ navtitle: About
         <small>in alphabetical order</small>
         <ul>
             <li>Alain Buret</li>
-            <li>Christophe Vandeplas</li> 
-            <li>Dries Verachtert</li> 
-            <li>Elise Huard</li>
-            <li>Floris Lambrechts</li> 
-            <li>Gerry Demaret</li> 
-            <li>Jan Gyselinck</li> 
-            <li>Jan Van Buggenhout</li> 
-            <li>Jan-Frederik Martens</li> 
-            <li>Jochen Maes</li> 
+            <li>Alasdair Kergon</li>
+            <li>Bart Weijs</li>
+            <li>Daniele Lacamera</li>
+            <li>Geert Goossens</li>
+            <li>Gerry Demaret</li>
+            <li>Jan Gyselinck</li>
+            <li>Jan-Frederik Martens</li>
+            <li>Jochen Maes</li>
             <li>Juan Rial</li>
-            <li>Mark Van den Borre</li> 
-            <li>Mattias 'Tias' Guns</li> 
-            <li>Pascal Bleser</li> 
-            <li>Philip Paeps</li> 
-            <li>Philippe De Swert</li> 
+            <li>Koen Vervloesem</li>
+            <li>Mark Van den Borre</li>
+            <li>Michael De Swert</li>
+            <li>Nicolas Daisomont</li>
+            <li>Nicole Horward</li>
+            <li>Niels Laukens</li>
+            <li>Pascal Bleser</li>
+            <li>Peter Leemans</li>
+            <li>Philip Paeps</li>
+            <li>Philippe De Swert</li>
+            <li>Pieter Heremans</li>
+            <li>Stella Rouzi</li>
+            <li>Tias Guns</li>
+            <li>Wouter Simons</li>
+            <li>Wouter Verhelst</li>
+            <li>Wynke Stulemeijer</li>
+            <li>Various volunteers who help out during the weekend</li>
             <li>...</li>
         </ul>
     </div>
