--- a/content/keysigning.html
+++ b/content/keysigning.html
@@ -1,11 +1,43 @@
 ---
 title: Keysigning
 ---
+<%
+  submission_deadline = "Thursday, 31 January 2013"
+  homework_due = "Sunday, 9 June 2013"
+
+  # Change this when the submission window opens/closes.
+  submission_closed = "The submission period starts Sunday 9 December 2012"
+  #submission_closed = false
+  #submission_closed = "The submission deadline has passed."
+
+  # Change this when the list of keys is published.
+  list_published = false
+
+  # Change this when the hashes of the keylist have been published.
+  hashes_published = false
+
+  # Generate keylist names based on the conference name from pentabarf.yaml.
+  klist = conference()[:title].downcase.gsub(/\s+/,"")
+%>
+
 <p>
   The annual keysigning event at FOSDEM is one of the largest of its kind.
   With more than one hundred participants every year, it is an excellent
-  opportunity to strengthen the web of trust.
+  opportunity to strengthen the web of trust.  We use a slightly modified
+  version of the <a href="https://en.wikipedia.org/wiki/Zimmermann%E2%80%93Sassaman_key-signing_protocol">
+    Zimmermann-Sassaman key-signing protocol</a> relying on a key submission
+  server rather than email to to collect keys.
 </p>
+
+<h3>Before the event</h3>
+<h4>Submit your keys</h4>
+<% if submission_closed %>
+<p>
+  <span class="label label-info">
+    <%= submission_closed %>
+  </span>
+</p>
+<% end %>
 
 <p>
   If you intend to participate in the PGP keysigning event at
@@ -21,21 +53,83 @@ title: Keysigning
 <p>
   You may want to verify that your submission made it to the keyserver by
   checking the list of submitted keys at <a
-  href="http://ksp.fosdem.org/">http://ksp.fosdem.org/</a>.
+  href="https://ksp.fosdem.org/">https://ksp.fosdem.org/</a>.
 </p>
 
-<p>
-  The deadline for submissions is <strong>Monday 31 January 2013</strong>.
-  After this date, the keyserver will no longer accept submissions and the
-  official keylist will be published.  Further instructions on what to do with
-  the keylist and how to participate in the keysigning party itself will be
-  communicated at that time.
-</p>
-
-<h3>Submission / Web of Trust Graphs</h3>
 <p>
   During the submission period, graphs will be generated of the density of the
   web of trust and the rate at which keys are being submitted.  You can find
   these graphs at: <a
   href="https://ksp.fosdem.org/graphs/">https://ksp.fosdem.org/graphs/</a>
+</p>
+
+<p>
+  The deadline for submissions is <strong><%= submission_deadline %></strong>.
+  After this date, the keyserver will no longer accept submissions and the
+  official keylist will be published.
+</p>
+
+<h4>Download the list of participants</h4>
+<% if ! list_published %>
+<p>
+  <span class="label label-info">
+    The list of participants has not yet been published!
+  </span>
+</p>
+<% end %>
+
+<p>
+  If you are participating in the keysigning event (i.e.: you have submitted
+  your key to the keyserver), you should download the final list of
+  participants and follow its instructions closely.
+</p>
+
+<p>
+  The final list of participants is available from
+  <a href="https://ksp.fosdem.org/files/">https://ksp.fosdem.org/files/</a>.
+</p>
+
+<p>
+  If there is a trust-path between you and the author, you should verify the
+  list's detached signature using:
+</p>
+<p style="margin-left: 2em;">
+  <code>% gpg --verify ksp-<%= klist %>.txt.asc ksp-<%= klist %>.txt</code>
+</p>
+
+<p>
+  Please bring the printed list, a pen and appropriate form of identification
+  with you to FOSDEM.  Be on time!
+</p>
+
+<h3>After the event</h3>
+<% if ! hashes_published %>
+<p>
+  <span class="label label-info">
+    The hashes of the keylist have not been published yet.
+  </span>
+</p>
+<% end %>
+
+<p>
+  If you participated in the keysigning event, but missed (parts of) the
+  participant list hashes as they flashed by during the starting presentation,
+  you should verify the hashes before signing any keys.
+</p>
+
+<p>
+  The hashes can be downloaded from
+  <a href="https://ksp.fosdem.org/files/">https://ksp.fosdem.org/files/</a>.
+  If there is a trust-path between you and the author, you should verify the
+  file's detached signature using:
+</p>
+<p style="margin-left: 2em;">
+  <code>% gpg --verify ksp-<%= klist %>-hashes.txt.asc ksp-<%= klist %>-hashes.txt</code>
+</p>
+
+<p>
+  Please complete your signing homework before
+  <strong><%= homework_due %></strong>, and upload new signatures on your keys
+  to a well-connected keyserver.  New statistics of the density of the web of
+  trust at FOSDEM will be published soon after that date.
 </p>
