sponsors: spell "O’Reilly" with a "’"
Now that we have proper font support, and the whole website is encoded
in UTF-8, we can finally spell the names of our sponsors correctly!

--- a/content/sponsors/oreilly.html
+++ b/content/sponsors/oreilly.html
@@ -1,10 +1,19 @@
 ---
-title: "O'Reilly"
+title: "O’Reilly"
 url: http://www.oreilly.com
 disabled: false
 ---
-<p>Once again, we are proud to have O'Reilly as one of our sponsors.</p>
+<p>Once again, we are proud to have O’Reilly as one of our sponsors.</p>
 
-<p>They are the premier information source for leading-edge computer technologies and communicate the knowledge of experts through books, conferences, and web sites. Their books, sporting the iconic animals on the covers, occupy a treasured place on the shelves of the developers building the next generation of software. Their conferences and summits bring innovators together to shape the revolutionary ideas that spark new industries. From the Internet to the web, Linux, Open Source, and now peer-to-peer networking, O'Reilly puts technologies on the map.</p>
+<p>
+  They are the premier information source for leading-edge computer technologies
+  and communicate the knowledge of experts through books, conferences, and web
+  sites.  Their books, sporting the iconic animals on the covers, occupy a
+  treasured place on the shelves of the developers building the next generation
+  of software.  Their conferences and summits bring innovators together to shape
+  the revolutionary ideas that spark new industries.  From the Internet to the
+  web, Linux, Open Source, and now peer-to-peer networking, O’Reilly puts
+  technologies on the map.
+</p>
 
-<p>O'Reilly supports the event financially.</p>
+<p>O’Reilly supports the event financially.</p>
