--- a/content/practical/beerevent.html
+++ b/content/practical/beerevent.html
@@ -15,7 +15,7 @@ opportunity to taste some of the finest
 <p>
   <span title="<%= (days.first[:conference_day] - 1).strftime("%Y-%m-%d") %>"
     class="dtstart">
-    <%= (days.first[:conference_day] - 1).strftime("%A %d %B %Y") %>
+    <%= (days.first[:conference_day] - 1).strftime("%A, %e %B %Y") %>
   </span>
   from 18:00(-ish) onwards, but feel free to join the party at any time of the
   evening.
